--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,28 @@
-version: '3.8'
-services:
-  mysql:
+﻿services:
+  web:
+    image: webdevops/php-apache:8.2
+    container_name: ecommerce_web
+    restart: always
+    ports:
+      - "8000:80"
+    volumes:
+      - .:/app
+    working_dir: /app
+    environment:
+      - WEB_DOCUMENT_ROOT=/app/public
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_DATABASE=ecommerce_db
+      - DB_USERNAME=ecommerce_user
+      - DB_PASSWORD=ecommerce_secure_pass_2026
+      - PHP_DISPLAY_ERRORS=1
+      - PHP_MEMORY_LIMIT=512M
+    depends_on:
+      - mysql
+    networks:
+      - ecommerce_network  
+
+  mysql: 
     image: mysql:8.0
     container_name: ecommerce_mysql
     restart: always
